<resources>
    <string name="app_name">HamBurgos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_promotions">Promoções</string>
    <string name="menu_shopper">Pedido</string>
    <string name="snack_image">Snack image</string>
    <string name="hamburguer">Hamburguer</string>
    <string name="more">Saber mais</string>
    <string name="add">Adicionar</string>
    <string name="price">$ %.2f</string>
    <string name="custom">Custom</string>
    <string name="done">Concluir</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="one">1</string>
    <string name="bacon">Bacon</string>
    <string name="dolar">$ 0.40</string>
    <string name="quantity">%d</string>
    <string name="label_yes">Sim</string>
    <string name="your_way">- do seu jeito</string>
    <string name="label_no">Não</string>
    <string name="confirmation">Confirmar pedido</string>
    <string name="empty_requests">Nenhum pedido ainda!</string>
    <string name="empty_promotions">Sem Promoções no momento</string>
    <string name="request_date">Data do Pedido: %s</string>
    <string name="snack_ingredients">Pão com gergelim, bacon, hambúrguer de carne e queijo</string>
    <string name="x_bacon">X-Bacon</string>
</resources>
