<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/bacon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintEnd_toStartOf="@+id/textQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textQuantity"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonForward"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonForward"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        app:layout_constraintEnd_toStartOf="@+id/textPrice"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/dolar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>