<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="8dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageThumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/snack_image"
            android:scaleType="centerCrop"
            android:src="@drawable/hamburguer"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textSnackName"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/x_bacon"
            card_view:layout_constraintStart_toStartOf="@+id/imageThumbnail"
            card_view:layout_constraintTop_toBottomOf="@id/imageThumbnail" />

        <TextView
            android:id="@+id/textPrice"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintBottom_toBottomOf="@+id/textSnackName"
            card_view:layout_constraintEnd_toEndOf="@+id/imageThumbnail"
            card_view:layout_constraintTop_toTopOf="@+id/textSnackName" />

        <TextView
            android:id="@+id/textIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/snack_ingredients"
            card_view:layout_constraintStart_toStartOf="@+id/imageThumbnail"
            card_view:layout_constraintTop_toBottomOf="@+id/textSnackName" />

        <Button
            android:id="@+id/buttonAdd"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            card_view:layout_constraintStart_toStartOf="@+id/imageThumbnail"
            card_view:layout_constraintTop_toBottomOf="@+id/textIngredients" />

        <Button
            android:id="@+id/buttonCustom"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            card_view:layout_constraintStart_toEndOf="@+id/buttonAdd"
            card_view:layout_constraintTop_toBottomOf="@+id/textIngredients" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>